force-app/main/default/objects/Beat__c/fields/iZone__c.field-meta.xml
<CustomField>
    <fullName>iZone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Zone</label>
    <referenceTo>Zone__c</referenceTo>
    <relationshipLabel>Beats</relationshipLabel>
    <relationshipName>Beats</relationshipName>
    <type>Lookup</type>
</CustomField>