force-app/main/default/objects/Beat__c/fields/Locality__c.field-meta.xml
<CustomField>
    <fullName>Locality__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Locality</label>
    <referenceTo>Locality__c</referenceTo>
    <relationshipLabel>Beats</relationshipLabel>
    <relationshipName>Beats</relationshipName>
    <type>Lookup</type>
</CustomField>